fix bug of unclickable button of collapseSideBar

--- a/src/Components/ProgramPage/SideBar/SideBar.css
+++ b/src/Components/ProgramPage/SideBar/SideBar.css
@@ -8,7 +8,7 @@
 }
 
 .ShowUpButton {
-    z-index: 1;
+    z-index: 1200;
     top: 10px;
     left: 0;
     border-radius: 0 5px 5px 0;
@@ -37,4 +37,8 @@
     height: 100%;
     width: 1px;
     opacity: 1;
+}
+
+.CollapseSideBar > .PrivateSwipeArea-root {
+    z-index: 1;
 }
